# renametoix

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
debian/: changelog  control  copyright
debian-crenametoix/: changelog  control  copyright  files
l10n/: de.po  en.po  es.po  l10n.csv  pt.po  ru.po  uk.po
tests/: test_rename.py
tools/: convert-l10n.py  convert-l10n.sh  prepare.py  update-version.sh
usr/lib/renametoix/: crenametoix.py  renametoix.py  renametoix.ui
usr/lib/renametoix/plugins/: doc.py  geo.py
usr/share/applications/: renametoix.desktop
